force-app/main/default/objects/Retirement_Account__c/Retirement_Account__c.object-meta.xml
<CustomObject>
    <label>Retirement Account</label>
    <nameField>
        <displayFormat>RA-{0000}</displayFormat>
        <label>Retirement Account Name Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retirement Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>