force-app/main/default/objects/Retirement_Account__c/fields/Address_Line2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line2__c</fullName>
    <label>Address Line2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>