force-app/main/default/objects/Retirement_Account__c/fields/Address_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Address_Sync_Date__c</fullName>
    <label>Address Sync Date</label>
    <type>Date</type>
</CustomField>