force-app/main/default/objects/Retirement_Account__c/fields/Address_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Address_Sync_Status__c</fullName>
    <label>Address Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>