force-app/main/default/objects/Retirement_Account__c/fields/LookUp__c.field-meta.xml
<CustomField>
    <fullName>LookUp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>sPAccount</label>
    <referenceTo>sPAccount__c</referenceTo>
    <relationshipLabel>Retirement Accounts</relationshipLabel>
    <relationshipName>Retirement_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>