force-app/main/default/objects/Retirement_Account__c/fields/LookUp_Name__c.field-meta.xml
<CustomField>
    <fullName>LookUp_Name__c</fullName>
    <formula>LookUp__r.field3__c</formula>
    <label>LookUp Name</label>
    <type>Text</type>
</CustomField>