force-app/main/default/objects/Retirement_Account__c/fields/Participant_Id__c.field-meta.xml
<CustomField>
    <fullName>Participant_Id__c</fullName>
    <formula>RIGHT( Retirement_Account_Id__c , 5)</formula>
    <label>Participant Id</label>
    <type>Text</type>
</CustomField>