force-app/main/default/objects/Retirement_Account__c/fields/Retirement_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Retirement_Account_Id__c</fullName>
    <label>Retirement Account Id</label>
    <length>14</length>
    <type>Text</type>
</CustomField>